# installer

./: .gitignore  CMakeLists.txt  README.md  vcpkg-configuration.json  vcpkg.json
src/: data.cpp  data.h  main.cpp
